:tada: Release of add-on Paperless-ngx 0.1.1

--- a/paperless-ngx/translations/en.yaml
+++ b/paperless-ngx/translations/en.yaml
@@ -1,5 +1,8 @@
 ---
 configuration:
+  url:
+    name: Paperless URL
+    description: You can set the value of PAPERLESS_URL manually
   filename:
     name: Filename
     description: Default file format
