--- a/paperless-ngx/translations/en.yaml
+++ b/paperless-ngx/translations/en.yaml
@@ -5,7 +5,7 @@ configuration:
     description: You can set the value of PAPERLESS_URL manually
   csrf_allowed:
     name: CSRF Allowed domains
-    description: List of domains you want to manually add to CSRD_ALLOWED
+    description: List of domains you want to manually add to PAPERLESS_CSRF_TRUSTED_ORIGINS
   filename:
     name: Filename
     description: Default file format
